# MeshValidationMCP

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/mesh_validation_mcp/: __init__.py  array_validate.py  boolean_validate.py  clearance.py  comparison.py  confidence.py  config.py  curvature.py  dfm.py  errors.py  features.py  generative_validate.py  golden.py  integrity.py  loading.py  metrics.py  oracles.py  primitives.py  region.py  remesh_validate.py  section.py  server.py  silhouette.py  symmetry.py  topology.py  units.py  validation.py
src/mesh_validation_mcp/rendering/: __init__.py  base.py  compose.py  matplotlib_backend.py  pyrender_backend.py
tests/: conftest.py  test_boolean.py  test_comparison.py  test_confidence.py  test_features.py  test_geometry3.py  test_golden.py  test_integrity.py  test_loading.py  test_localized.py  test_metrics.py  test_oracles.py  test_phase5.py  test_phase6.py  test_region.py  test_rendering.py  test_section.py  test_server.py  test_validation.py  test_visual.py
