[project]
name = "mesh-validation-mcp"
version = "0.1.0"
description = "MCP server that validates 3D mesh manipulations with deterministic geometric checks and multi-view visual renders"
readme = "README.md"
authors = [
    { name = "baho0", email = "baho34963@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.1",
    "matplotlib>=3.10",
    "mcp>=1.27,<2",
    "networkx>=3.6.1",
    "numpy>=2.1",
    "pillow>=11",
    "rtree>=1.4",
    "scipy>=1.14",
    "trimesh>=4.12",
]

[project.optional-dependencies]
gl = [
    "pyrender==0.1.45",
    "pyglet>=1.5.28,<2",
    "pyopengl>=3.1.9",
]

[project.scripts]
mesh-validation-mcp = "mesh_validation_mcp.server:main"

[tool.uv]
# pyrender hard-pins PyOpenGL==3.1.0 (2014); override so the [gl] extra resolves
override-dependencies = ["pyopengl>=3.1.9"]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "pytest>=9.1.1",
]
